tests/snapshots/integration__integration_tests__list__json_with_git_operation.snap
---
source: tests/integration_tests/list.rs
info:
  program: wt
  args:
    - list
    - "--format=json"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----
[
  {
    "head_sha": "f4fa1ba1ca52a38a0036c3c9dd8b486a83ced1e5",
    "branch": "main",
    "timestamp": 0,
    "commit_message": "Main conflicting changes",
    "ahead": 0,
    "behind": 0,
    "upstream_remote": null,
    "upstream_ahead": 0,
    "upstream_behind": 0,
    "pr_status": null,
    "status": {
      "working_tree": {
        "untracked": false,
        "modified": false,
        "staged": false,
        "renamed": false,
        "deleted": false
      },
      "branch_op_state": "",
      "main_divergence": "IsMain",
      "upstream_divergence": "",
      "worktree_state": ""
    },
    "status_symbols": {
      "working_tree": "",
      "branch_op_state": "",
      "main_divergence": "^",
      "upstream_divergence": "",
      "worktree_state": ""
    },
    "status_line": "main  /u001b[2m^/u001b[22m",
    "type": "worktree",
    "path": "[REPO]",
    "bare": false,
    "detached": false,
    "working_tree_diff": {
      "added": 0,
      "deleted": 0
    },
    "working_tree_diff_with_main": {
      "added": 0,
      "deleted": 0
    },
    "is_main": true,
    "is_current": true
  },
  {
    "head_sha": "f4fa1ba1ca52a38a0036c3c9dd8b486a83ced1e5",
    "branch": "feature",
    "timestamp": 0,
    "commit_message": "Main conflicting changes",
    "ahead": 0,
    "behind": 0,
    "upstream_remote": null,
    "upstream_ahead": 0,
    "upstream_behind": 0,
    "pr_status": null,
    "status": {
      "working_tree": {
        "untracked": false,
        "modified": false,
        "staged": false,
        "renamed": false,
        "deleted": false
      },
      "branch_op_state": "Conflicts",
      "main_divergence": "",
      "upstream_divergence": "",
      "worktree_state": ""
    },
    "status_symbols": {
      "working_tree": "",
      "branch_op_state": "✘",
      "main_divergence": "",
      "upstream_divergence": "",
      "worktree_state": ""
    },
    "status_line": "feature  /u001b[31m✘/u001b[39m",
    "type": "worktree",
    "path": "[REPO].feature",
    "bare": false,
    "detached": true,
    "working_tree_diff": {
      "added": 0,
      "deleted": 0
    },
    "working_tree_diff_with_main": {
      "added": 0,
      "deleted": 0
    },
    "git_operation": "rebase",
    "is_main": false
  }
]

----- stderr -----
